--- a/Código/src/templates/auth/signup.html
+++ b/Código/src/templates/auth/signup.html
@@ -49,7 +49,10 @@ Login
         </div>
         <div class="form-field d-flex align-items-center">
             <span class="fas fa-key"></span>
-            <input type="password" name="password" id="password" placeholder="Contraseña" required>
+            <input type="password" name="password" id="password" placeholder="Contraseña"
+                pattern="(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d\S]{8,}"
+                oninvalid="this.setCustomValidity('La contraseña debe tener al menos 8 caracteres e incluir al menos un número y una letra')"
+                oninput="this.setCustomValidity('')" required>
         </div>
         <div class="form-field d-flex align-items-center">
             <span class="fas fa-key"></span>
