--- a/Código/src/templates/auth/auth_layout.html
+++ b/Código/src/templates/auth/auth_layout.html
@@ -2,42 +2,39 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="{{ url_for('static', filename='img/logo.png') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='img/logo-color.png') }}" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
+    <script src="{{ url_for('static', filename='js/auth.js') }}"></script>
     <title>{% block title %}{% endblock %}</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Custom CSS -->
     {% block customCSS %}{% endblock %}
-    <!-- Custom JS -->
     {% block customJS %}{% endblock %}
-
-</head>
-
-<body>
-    {% block body %}{% endblock %}
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script>
-        window.addEventListener('load', function () {
-            var wrapper = document.querySelector('.wrapper');
-            var windowHeight = window.innerHeight;
-            var wrapperHeight = wrapper.offsetHeight;
+</head>
 
-            if (wrapperHeight > windowHeight) {
-                // Añadir margen solo cuando el wrapper es más alto que la ventana
-                wrapper.style.marginTop = '3%'; // Ajusta según sea necesario
-                wrapper.style.marginBottom = '3%'; // Ajusta según sea necesario
-            } else {
-                wrapper.style.marginTop = (windowHeight - wrapperHeight) / 2 + 'px';
-            }
-        });
-
-    </script>
+<body>
+    <div class="body-container">
+        <div class="box">
+            <div class="logo">
+                <img src="{{ url_for('static', filename='img/logo-color.png') }}" alt="">
+            </div>
+            {% block body %}{% endblock %}
+        </div>
+    </div>
+    <footer>
+        <div class="footer">
+            <p>UAH - TFG Alejandro Martín</p>
+            <img src="{{ url_for('static', filename='img/logo-claro.png') }}" alt="">
+            <ul>
+                <li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
