--- a/Código/src/templates/auth/login.html
+++ b/Código/src/templates/auth/login.html
@@ -4,46 +4,35 @@
 Iniciar sesión
 {% endblock %}
 
-{% block customCSS %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/auth/login.css') }}">
-{% endblock %}
-
 {% block body %}
-
-<div class="wrapper">
-    <div class="logo">
-        <img src="{{ url_for('static', filename='img/logo.png') }}" alt="">
-    </div>
-    <div class="text-center mt-4 name">
-        Iniciar sesión
-    </div>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <br />
-    {% for message in messages %}
-    <div class="alert alert-primary alert-dismissible" role="alert">
-        <strong>{{ message }}</strong>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-    {% endfor %}
-    {% endif %}
-    {% endwith %}
-    <form class="p-3 mt-3" action="/auth/login" method="POST">
-        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-        <div class="form-field d-flex align-items-center">
-            <span class="far fa-user"></span>
-            <input type="text" name="username" id="username" placeholder="Nombre de usuario" required>
-        </div>
-        <div class="form-field d-flex align-items-center">
-            <span class="fas fa-key"></span>
+<div class="auth-title">
+    Iniciar sesión
+</div>
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+{% for message in messages %}
+<div class="alert" role="alert">
+    <p>{{ message }}</p>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{% endfor %}
+{% endif %}
+{% endwith %}
+<form action="/auth/login" method="POST">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+    <div class="form">
+        <input type="text" name="username" id="username" placeholder="Nombre de usuario" required>
+        <div class="password">
             <input type="password" name="password" id="password" placeholder="Contraseña" required>
+            <button type="button" class="btn-password btn-password-show" onclick="showPassword()"
+                id="password-button"></button>
         </div>
-        <button class="btn mt-3" type="submit">Entrar</button>
-    </form>
-    <div class="text-center fs-6">
-        <a href="reset-password">He olvidado mi contraseña</a>
-        <hr>
-        <a href="signup">¿Aún sin una cuenta? Registrarse</a>
+        <button type="submit" class="btn-submit">Entrar</button>
     </div>
+</form>
+<div class="links">
+    <a href="reset-password">He olvidado mi contraseña</a>
+    <div class="divisor"></div>
+    <a href="signup">¿Aún sin una cuenta? Registrarse</a>
 </div>
 {% endblock %}
