--- a/Código/src/templates/auth/reset_password.html
+++ b/Código/src/templates/auth/reset_password.html
@@ -1,45 +1,37 @@
 {% extends './auth/auth_layout.html' %}
 
 {% block title %}
-Contraseña olvidada
+Recuperar contraseña
 {% endblock %}
 
 {% block customCSS %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/auth/login.css') }}">
 {% endblock %}
 
 {% block body %}
 
-<div class="wrapper">
-    <div class="logo">
-        <img src="{{ url_for('static', filename='img/logo.png') }}" alt="">
+<div class="auth-title">
+    Recuperar contraseña
+</div>
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+{% for message in messages %}
+<div class="alert" role="alert">
+    <p>{{ message }}</p>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{% endfor %}
+{% endif %}
+{% endwith %}
+<form action="/auth/reset-password" method="POST">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+    <div class="form">
+        <input type="email" name="email" id="email" placeholder="Correo electrónico" required>
+        <button class="btn-submit" type="submit">Recuperar contraseña</button>
     </div>
-    <div class="text-center mt-4 name">
-        Introduce dirección de correo electrónico
-    </div>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <br />
-    {% for message in messages %}
-    <div class="alert alert-primary alert-dismissible" role="alert">
-        <strong>{{ message }}</strong>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-    {% endfor %}
-    {% endif %}
-    {% endwith %}
-    <form class="p-3 mt-3" action="/auth/reset-password" method="POST">
-        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-        <div class="form-field d-flex align-items-center">
-            <span class="far fa-user"></span>
-            <input type="email" name="email" id="email" placeholder="Correo electrónico" required>
-        </div>
-        <button class="btn mt-3" type="submit">Recuperar contraseña</button>
-    </form>
-    <div class="text-center fs-6">
-        <a href="login">Volver a iniciar sesión</a>
-        <hr>
-        <a href="signup">¿Aún sin una cuenta? Registrarse</a>
-    </div>
+</form>
+<div class="links">
+    <a href="login">Volver a iniciar sesión</a>
+    <div class="divisor"></div>
+    <a href="signup">¿Aún sin una cuenta? Registrarse</a>
 </div>
 {% endblock %}
