--- a/Código/src/templates/layout.html
+++ b/Código/src/templates/layout.html
@@ -2,42 +2,57 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="{{ url_for('static', filename='img/logo.png') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='img/logo-color.png') }}" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/layout.css') }}">
     {% block customCSS %}{% endblock %}
-    <!-- Custom JS -->
     {% block customJS %}{% endblock %}
-
 </head>
 
 <body>
-    {% block body %}{% endblock %}
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script>
-        window.addEventListener('load', function () {
-            var wrapper = document.querySelector('.wrapper');
-            var windowHeight = window.innerHeight;
-            var wrapperHeight = wrapper.offsetHeight;
-
-            if (wrapperHeight > windowHeight) {
-                // Añadir margen solo cuando el wrapper es más alto que la ventana
-                wrapper.style.marginTop = '3%'; // Ajusta según sea necesario
-                wrapper.style.marginBottom = '3%'; // Ajusta según sea necesario
-            } else {
-                wrapper.style.marginTop = (windowHeight - wrapperHeight) / 2 + 'px';
-            }
-        });
-
-    </script>
+    <header>
+        <div class="navbar">
+            <nav>
+                <!-- <div class="logo">
+                    <img src="{{ url_for('static', filename='img/logo.png') }}" alt="">
+                </div> -->
+                <ul class="nav-links">
+                    <li>
+                        <a class="nav-logo" href="{{ url_for('home') }}">
+                            <img src="{{ url_for('static', filename='img/logo-claro.png') }}" alt="">
+                        </a>
+                    </li>
+                    <li><a href="{{ url_for('home') }}">Inicio</a></li>
+                </ul>
+                <div class="nav-user">
+                    <ul>
+                        <li>
+                            <a href="#">{{ current_user.name }} ▼</a>
+                            <ul class="dropdown">
+                                <li><a href="{{ url_for('user.profile') }}">Perfil</a></li>
+                                <li><a href="{{ url_for('auth.logout') }}">Cerrar sesión</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <div class="body-container">
+        {% block body %}{% endblock %}
+    </div>
+    <footer>
+        <div class="footer">
+            <p>UAH - TFG  Alejandro Martín</p>
+            <img src="{{ url_for('static', filename='img/logo-claro.png') }}" alt="">
+            <ul>
+                <li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
