--- a/Código/src/templates/user/profile.html
+++ b/Código/src/templates/user/profile.html
@@ -1,13 +1,13 @@
 {% extends './layout.html' %}
 
 {% block title %}
-Home
+{{ current_user.name }}
 {% endblock %}
 
 {% block customCSS %}
 {% endblock %}
 
 {% block body %}
-<h1>Página de inicio</h1>
+<h1>Página de usuario</h1>
 <h4>En desarrollo</h4>
 {% endblock %}
