--- a/Código/src/templates/layout.html
+++ b/Código/src/templates/layout.html
@@ -27,7 +27,7 @@
                 <div class="nav-user">
                     <ul>
                         <li>
-                            <a href="#">{{ current_user.name }} ▼</a>
+                            <a href="#">{{ current_user.nombre }} ▼</a>
                             <ul class="dropdown">
                                 <li><a href="{{ url_for('user.profile') }}">Perfil</a></li>
                                 <li><a href="{{ url_for('auth.logout') }}">Cerrar sesión</a></li>
