--- a/Código/src/static/css/root.css
+++ b/Código/src/static/css/root.css
@@ -4,8 +4,10 @@
     --oscuro1: #020c12;
     --oscuro2: #062337;
     --oscuro3: #0A3B5C;
+    --medio1: #6a6a6a;
     --claro1: #ddd;
     --claro2: #b8b8b8;
+    --claro3: #bfbfbf;
     --amarillo1: #EBB446;
     --amarillo2: #EFC36C;
     --amarillo3: #F3D291;
