--- a/Código/src/templates/collection/insert_select.html
+++ b/Código/src/templates/collection/insert_select.html
@@ -1,10 +1,10 @@
-{% extends './layout_menus.html' %}
+{% extends './layout.html' %}
 
 {% block title %}
 Nuevo disco
 {% endblock %}
 
-{% block customCSS1 %}
+{% block customCSS %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/collection.css') }}">
 {% endblock %}
 
