--- a/Código/src/static/css/collection.css
+++ b/Código/src/static/css/collection.css
@@ -9,38 +9,28 @@
     width: 7rem;
 }
 
-#videoContainer {
-    z-index: 1000;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-#videoPreview {
-    width: 100%;
-    height: auto;
-    z-index: 1000;
-}
-
-#closeButton {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 1001;
-    cursor: pointer;
-    background-color: transparent;
+.reg-btn {
+    display: inline-block;
+    padding: 0.8rem;
+    text-decoration: none;
+    color: var(--oscuro2);
+    font-weight: 500;
+    text-align: center;
+    background-color: var(--amarillo1);
+    margin: 0.4rem 0rem;
+    border-radius: 10em;
+    transition-duration: 0.3s;
+    width: 90%;
     border: none;
-    color: #fff;
-    font-size: 20px;
-    padding: 5px;
-    border-radius: 50%;
-    transition: background-color 0.3s;
+    font-size: 1rem;
 }
 
-#closeButton:hover {
-    background-color: rgba(255, 255, 255, 0.3);
+.reg-btn:hover {
+    background-color: var(--naranja2);
+    font-weight: bold;
+    transform: scale(1.02);
 }
+
 
 .link-btn {
     display: inline-block;
@@ -100,7 +90,7 @@
     grid-column-end: 1;
     grid-row-start: 2;
     grid-row-end: 5;
-    box-shadow: 3px 3px 11px 0px rgba(0,0,0,0.58);
+    box-shadow: 3px 3px 11px 0px rgba(0, 0, 0, 0.58);
 }
 
 .info h1 {
@@ -133,4 +123,73 @@
 
 .box {
     position: relative;
+}
+
+
+
+
+.loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.loading-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading-image {
+    width: 50px;
+    height: 50px;
+    margin-right: 20px;
+    animation: spin 1s linear infinite;
+}
+
+.loading-text {
+    font-size: 20px;
+    color: white;
+}
+
+.question-image {
+    display: inline-block;
+    width: 1.6rem;
+    cursor: pointer;
+    z-index: 11;
+}
+
+.question-image:hover + .hover-text {
+    display: block;
+}
+
+.hover-text {
+    display: none;
+    width: 30%;
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    z-index: 10;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    text-align: justify;
+}
+
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
