--- a/Código/src/templates/layout.html
+++ b/Código/src/templates/layout.html
@@ -26,7 +26,8 @@
                             <img src="{{ url_for('static', filename='img/logo-claro.png') }}" alt="">
                         </a>
                     </li>
-                    <li><a href="{{ url_for('home') }}">Inicio</a></li>
+                    <li><a href="{{ url_for('collection.view') }}">Mi colección</a></li>
+                    <li><a href="{{ url_for('collection.insert') }}">Nuevo disco</a></li>
                 </ul>
                 <div class="nav-user">
                     <ul>
