--- a/Código/src/static/css/layout.css
+++ b/Código/src/static/css/layout.css
@@ -15,20 +15,32 @@ body {
 
 .body-container {
     padding: 2em 3em;
-    margin: 0;
+    /* margin: 0; */
+    /* margin-top: auto; */
 }
 
 .main {
     padding: 1rem;
 }
 
+header {
+    grid-row: 1;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 1001;
+}
+
+
 
 .navbar nav {
+    /* position: fixed; */
     background-color: var(--oscuro1);
     width: 100%;
-    height: auto;
+    /* height: fit-content; */
     color: var(--claro1);
     display: flex;
+    /* z-index: 1001; */
 }
 
 .nav-logo {
