--- a/Código/src/templates/admin/modify_disk_admin.html
+++ b/Código/src/templates/admin/modify_disk_admin.html
@@ -6,49 +6,47 @@ Nuevo disco
 
 {% block customCSS %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/collection.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
 {% endblock %}
 
 {% block customJS %}
 <script src="{{ url_for('static', filename='js/collection.js') }}"></script>
+<script src="{{ url_for('static', filename='js/admin.js') }}"></script>
 {% endblock %}
 
 {% block bodyContent %}
 
 <h4>Modificaciones:</h4>
-<form action="/modify/{{ diskData.idDisco }}" method="POST">
+<form action="/admin/modify/{{ diskData.idDisco }}" method="POST">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <div class="form">
         <img src="{{ diskData.imageUrl }}">
         <p>Título</p>
-        <input type="hidden" name="originalTitle" value="{{ diskData.title }}">
         <input type="text" name="title" value="{{ diskData.title }}">
         <p>Artista</p>
-        <input type="hidden" name="originalArtist" value="{{ diskData.artists }}">
         <input type="text" name="artists" value="{{ diskData.artists }}">
         <p>Formato</p>
-        <input type="hidden" name="originalFormat" value="{{ diskData.format }}">
         <input type="text" name="format" value="{{ diskData.format }}">
         <p>Año</p>
-        <input type="hidden" name="originalYear" value="{{ diskData.year }}">
         <input type="text" name="year" value="{{ diskData.year }}">
         <p>País</p>
-        <input type="hidden" name="originalCountry" value="{{ diskData.country }}">
         <input type="text" name="country" value="{{ diskData.country }}">
         <input type="hidden" name="idDisco" value="{{ diskData.idDisco }}">
         <input type="hidden" name="idArtista" value="{{ diskData.idArtista }}">
         <input type="hidden" name="idEdicion" value="{{ diskData.idEdicion }}">
         {% for song in diskData.tracklist %}
         <div class="song">
-            <input type="hidden" name="tracklist[{{ loop.index0 }}][idCancion]" value="{{ song.idCancion }}">
+            <input type="hidden" name="tracklist[{{ loop.index0 }}][songId]" value="{{ song.idCancion }}">
             <p>Canción</p>
-            <input type="hidden" name="tracklist[{{ loop.index0 }}][originalSongTitle]" value="{{ song.songTitle }}">
             <input type="text" name="tracklist[{{ loop.index0 }}][songTitle]" value="{{ song.songTitle }}">
             <p>Duración</p>
-            <input type="hidden" name="tracklist[{{ loop.index0 }}][originalSongDuration]"
-                value="{{ song.songDuration }}">
             <input type="text" name="tracklist[{{ loop.index0 }}][songDuration]" value="{{ song.songDuration }}">
+            <input type="checkbox" id="delete" name="tracklist[{{ loop.index0 }}][delete]" value="True">
+            <label for="delete">Eliminar canción</label><br>
         </div>
         {% endfor %}
+        <div id="newSongs"></div>
+        <button type="button" onclick="addSong()">Añadir canción</button>
         <input type="textarea" name="observations" placeholder="Observaciones">
         <button type="submit" class="btn-submit">Enviar</button>
     </div>
