--- a/Código/src/templates/collection/insert_select.html
+++ b/Código/src/templates/collection/insert_select.html
@@ -8,6 +8,11 @@ Nuevo disco
 <link rel="stylesheet" href="{{ url_for('static', filename='css/select.css') }}">
 {% endblock %}
 
+{% block customJS %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
+<script src="{{ url_for('static', filename='js/select.js') }}"></script>
+{% endblock %}
+
 {% block bodyContent %}
 <div class="select-tile">
     <h1>Resultados para '{{ code }}'</h1>
