--- a/Código/src/templates/admin/layout_admin.html
+++ b/Código/src/templates/admin/layout_admin.html
@@ -77,7 +77,7 @@
             <img src="{{ url_for('static', filename='img/logo/Logo_Condensed_White.svg') }}" alt="">
             <ul>
                 <li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Manual de usuario</a></li>
             </ul>
         </div>
     </footer>
