--- a/Código/src/templates/auth/auth_layout.html
+++ b/Código/src/templates/auth/auth_layout.html
@@ -43,7 +43,7 @@
             <p>UAH - TFG Alejandro Martín</p>
             <img src="{{ url_for('static', filename='img/logo/Logo_Condensed_White.svg') }}" alt="">
             <ul>
-                <li class="nav-item"><a href="{{ url_for('contact') }}" class="nav-link" target="_blank">Manual de usuario</a></li>
+                <li class="nav-item"><a href="{{ url_for('open_pdf', filename='manual.pdf') }}" class="nav-link" target="_blank">Manual de usuario</a></li>
             </ul>
         </div>
     </footer>
