--- a/Código/src/templates/admin/layout_admin.html
+++ b/Código/src/templates/admin/layout_admin.html
@@ -76,8 +76,7 @@
             <p>UAH - TFG Alejandro Martín</p>
             <img src="{{ url_for('static', filename='img/logo/Logo_Condensed_White.svg') }}" alt="">
             <ul>
-                <li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Manual de usuario</a></li>
+                <li class="nav-item"><a href="{{ url_for('open_pdf', filename='manual.pdf') }}" class="nav-link" target="_blank">Manual de usuario</a></li>
             </ul>
         </div>
     </footer>
